k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subtracker
  namespace: subtracker
spec:
  selector:
    app: subtracker
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
